--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -12,6 +12,9 @@
       ],
       "main": true
     },
+    "flexslider.css": {
+      "bower": ["flexslider"]
+    },
     "customizer.js": {
       "files": [
         "scripts/customizer.js"
@@ -19,6 +22,9 @@
     },
     "jquery.js": {
       "bower": ["jquery"]
+    },
+    "flexslider.js": {
+      "bower": ["flexslider"]
     }
   },
   "config": {
